[ADD] Fully available in french and english

--- a/src/VN-master-detail/VN-master-detail/Components/SideBar.xaml
+++ b/src/VN-master-detail/VN-master-detail/Components/SideBar.xaml
@@ -16,12 +16,12 @@
             Direction="Column"
             JustifyContent="SpaceEvenly">
             <Button
-                Text="Recherche"
+                Text="{Binding Search, Source={StaticResource appResources}}"
                 TextColor="{DynamicResource PrimaryTextColor}"
                 BackgroundColor="{DynamicResource SecondaryBackgroundColor}"
                 Command="{Binding NavigationVM.GoToSearch}"/>
             <Button
-                Text="Acceuil"
+                Text="{Binding Home, Source={StaticResource appResources}}"
                 TextColor="{DynamicResource PrimaryTextColor}"
                 BackgroundColor="{DynamicResource SecondaryBackgroundColor}"
                 Command="{Binding NavigationVM.GoToHome}"/>
