[ADD] Langage saved as preference

--- a/src/VN-master-detail/VN-master-detail/Profile.xaml
+++ b/src/VN-master-detail/VN-master-detail/Profile.xaml
@@ -68,13 +68,8 @@
                 TextColor="{DynamicResource PrimaryTextColor}"
                 BackgroundColor="{DynamicResource SecondaryBackgroundColor}"
                 SelectedItem="{Binding CurrentCulture, Source={StaticResource appResources}}"
+                ItemsSource="{Binding AvailableLangages, Source={StaticResource appResources}}"
                 Margin="10">
-                <Picker.ItemsSource>
-                    <x:Array Type="{x:Type x:String}">
-                        <x:String>fr-FR</x:String>
-                        <x:String>en</x:String>
-                    </x:Array>
-                </Picker.ItemsSource>
                 <Picker.Behaviors>
                     <toolkit:EventToCommandBehavior
                         Command="{Binding ChangeCulture, Source={StaticResource appResources}}"
